# Finternet-SDK

./: .gitignore  BLOCKCHAIN_EVIDENCE.md  Cargo.toml  GRANT_SUBMISSION_GUIDE.md  README.md
examples/: basic_flow.rs  enhanced_demo.rs
scripts/: setup_devnet_usdc.sh
src/: asset.rs  identity.rs  ledger.rs  lib.rs  payment.rs
web-ui/: README.md  package.json
web-ui/src/app/: page.tsx
web-ui/src/components/: AssetList.tsx  AssetTokenization.tsx  Header.tsx  PaymentInterface.tsx  WalletConnectionProvider.tsx  WalletInfo.tsx
web-ui/src/components/ui/: tabs.tsx
