[package]
name = "finternet-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust-based Finternet SDK for asset tokenization, ledger interaction, and cross-border payments on Solana"
license = "MIT"
repository = "https://github.com/your-org/finternet-sdk-rust"

[lib]
name = "finternet_sdk"
path = "src/lib.rs"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
mpl-token-metadata = "4.1"
spl-token = "4.0"
spl-associated-token-account = "2.3"
spl-memo = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
bs58 = "0.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[[bin]]
name = "finternet-cli"
path = "bin/main.rs"

[[example]]
name = "basic_flow"
path = "examples/basic_flow.rs"

[[example]]
name = "enhanced_demo"
path = "examples/enhanced_demo.rs" 